# opsflow-env

./: Dockerfile  README.md  app.py  openenv.yaml  pyproject.toml  requirements.txt
env/: environment.py  grader.py  models.py  tasks.py
scripts/: run_inference.py
server/: app.py
