[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opsflow-openenv"
version = "1.0.0"
description = "Real-world delivery operations simulation environment"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic",
    "openai",
    "fastapi",
    "uvicorn"
]

[project.optional-dependencies]
dev = ["pytest"]
